2010-08-17  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/gutenprint.xml:
	  Entries modified in the MySQL database.

2010-08-16  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to represent version 5.2.6.

2010-08-15  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Brother-HL-2170W.xml:
	  Entries modified in the MySQL database.

2010-08-14  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/hl1250.xml, driver/hpijs-pcl5e.xml, driver/lj4dith.xml,
	  driver/ljet4.xml, driver/ljet4d.xml, driver/pxlmono.xml,
	  printer/Brother-HL-2170W.xml: Changed drivers for the Brother
	  HL-2170W, the printer works only in the PCL-5e mode, not with
	  PCL-XL (Ubuntu bug #570027).

2010-07-16  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Oki-B410.xml: Added Oki B410 (Ubuntu bug #603894).

2010-07-16  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Lexmark-E120n.xml:
	  Entries modified in the MySQL database.

2010-07-15  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-E120n.xml: Set recommended driver to
	  "Postscript" and added also PCL-5e drivers as possible
	  drivers (Ubuntu bug #548747).

	* printer/Lexmark-E120.xml: Added "hpijs-pcl5e" to the printer's
	  driver list.

2010-07-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_1220.xml,
	  printer/HP-LaserJet_1300.xml, printer/HP-LaserJet_1320.xml,
	  printer/HP-LaserJet_3390.xml, printer/HP-LaserJet_3392.xml:
	  Recommend the "pxlmono" driver instead of HPLIP PostScript, these
	  printers do not have enough memory for high-resolution PostScript
	  printing.

2010-07-10  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Kodak-ESP_3250.xml:
	  New entries added to the MySQL database.

2010-07-09  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-OfficeJet_4300.xml: printer/Samsung-CLP-300.xml,