@@ -1,0 +1,13 @@
+<printer id="printer/HP-Photosmart_C6380">
+  <make>HP</make>
+  <model>Photosmart C6380</model>
+  <mechanism>
+    <inkjet />
+    <color />
+  </mechanism>
+  <url>http://h10025.www1.hp.com/ewfrf/wc/product%sproduct=3560280&amp;amp;lc=en&amp;amp;cc=us&amp;amp;dlc=en&amp;amp;lang=en&amp;amp;tmp_track_link=ot_we/prodlink/en_us/3560280/loc:0&amp;amp;cc=us</url>
+  <lang>
+    <pcl level="3" />
+  </lang>
+  <functionality>A</functionality>
+</printer>
