@@ -1,3 +1,8 @@
+2010-09-06  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/HP-Photosmart_C6380.xml:
+	  New entries added to the MySQL database.
+
 2010-08-17  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/driver/gutenprint.xml:
